# sfSnakePlus

./: README.md  游戏设计说明.md  编译环境说明.md
sfSnake/: CMakeLists.txt  Fruit.cpp  Fruit.h  Game.cpp  Game.h  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  Grid.cpp  Grid.h  Math.cpp  Math.h  MenuScreen.cpp  MenuScreen.h  OptionScreen.cpp  OptionScreen.h  Snake.cpp  Snake.h  SnakeNode.cpp  SnakeNode.h
